--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>IAbogadi</title>
+    <link rel="shortcut icon" href="">
   </head>
   <body>
     <div id="root"></div>
